add function to update results

--- a/show_results/frontend/index.html
+++ b/show_results/frontend/index.html
@@ -30,6 +30,7 @@
                 <p id="average-spending" class="text-lg font-semibold"></p>
                 <p id="highest-category" class="text-lg font-semibold"></p>
                 <p id="monthly-report" class="text-lg font-semibold"></p>
+                 <button id="update-results" class="w-full bg-green-500 text-white py-2 rounded mt-4">Update Results</button>
             </div>
         </div>
     </div>
