--- a/show_results/frontend/index.html
+++ b/show_results/frontend/index.html
@@ -1,36 +1,56 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Expense Analytics</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-100">
-    <nav class="bg-blue-500 p-4 text-white flex justify-between">
-        <h1 class="text-xl font-bold">Expense Tracker</h1>
-        <form id="login-form" class="flex space-x-2">
-            <input type="text" id="username" placeholder="Username" class="p-2 rounded text-black" required>
-            <input type="password" id="password" placeholder="Password" class="p-2 rounded text-black" required>
-            <button type="submit" id="login-button" class="bg-white text-blue-500 px-4 py-2 rounded">Login</button>
-        </form>
+<body class="bg-gray-900 text-white">
+    <nav class="bg-gray-800 p-4 text-white flex justify-between">
+        <h1 class="text-xl font-bold">Expense Tracker - Analytics</h1>
+        <div class="flex space-x-2">
+            <form id="login-form" class="flex space-x-2">
+                <input type="text" id="username" placeholder="Username" class="p-2 rounded bg-gray-700 text-white" required>
+                <input type="password" id="password" placeholder="Password" class="p-2 rounded bg-gray-700 text-white" required>
+            </form>
+            <button id="login-button" class="bg-blue-500 px-4 py-2 rounded">Login</button>
+        </div>
     </nav>
     
-    <div class="flex justify-center items-center h-screen">
-        <div class="bg-white p-6 rounded-lg shadow-md w-96">
+    <div class="flex justify-center items-center min-h-screen p-4">
+        <div class="bg-gray-800 p-6 rounded-lg shadow-md w-full max-w-lg">
             <h2 class="text-xl font-bold mb-4">Expense Analytics</h2>
-            <p id="welcome-message" class="text-sm font-semibold text-blue-700 mb-3"></p>
+            <p id="welcome-message" class="text-sm font-semibold text-blue-400 mb-3"></p>
 
             <!-- Show Before Login -->
-            <p id="login-message" class="text-lg font-semibold text-center">You must log in to view expense analytics.</p>
+            <p id="login-message" class="text-lg font-semibold text-center text-gray-300">Please log in to view expense analytics.</p>
 
             <!-- Analytics Data (Hidden Before Login) -->
             <div id="analytics-data" class="hidden">
-                <p id="total-spending" class="text-lg font-semibold"></p>
-                <p id="average-spending" class="text-lg font-semibold"></p>
-                <p id="highest-category" class="text-lg font-semibold"></p>
-                <p id="monthly-report" class="text-lg font-semibold"></p>
-                 <button id="update-results" class="w-full bg-green-500 text-white py-2 rounded mt-4">Update Results</button>
+                <table class="w-full border border-gray-300 text-white">
+
+                    <tbody>
+                        <tr>
+                            <td class="bg-gray-700 border border-gray-500  px-4 py-2 w-1/3">Total Expense for This Year</td>
+                            <td id="total-spending" class="border border-gray-500  px-4 py-2 w-2/3 font-semibold"></td>
+                        </tr>
+                        <tr>
+                            <td class="bg-gray-700 border border-gray-500  px-4 py-2 w-1/3">Average Expense per Category</td>
+                            <td id="average-spending" class="border border-gray-500  px-4 py-2 w-2/3 font-semibold"></td>
+                        </tr>
+                        <tr>
+                            <td class="bg-gray-700 border border-gray-500  px-4 py-2 w-1/3">Highest Expense Category</td>
+                            <td id="highest-category" class="border border-gray-500  px-4 py-2 w-2/3 font-semibold"></td>
+                        </tr>
+                        <tr>
+                            <td class="bg-gray-700 border border-gray-500  px-4 py-2 w-1/3">This Month</td>
+                            <td id="monthly-report" class="border border-gray-500  px-4 py-2 w-2/3 font-semibold"></td>
+                        </tr>
+                    </tbody>
+                </table>
+
+                 <button id="update-results" class="w-full bg-green-500 text-white text-white py-2 rounded mt-4">Update Results</button>
             </div>
         </div>
     </div>
