add feature for allowing users to register

--- a/enter_data/frontend/index.html
+++ b/enter_data/frontend/index.html
@@ -15,6 +15,7 @@
                 <input type="password" id="password" placeholder="Password" class="p-2 rounded bg-gray-700 text-white" required>
             </form>
             <button id="login-button" class="bg-blue-500 px-4 py-2 rounded">Login</button>
+            <button id="register-button" class="bg-green-500 px-4 py-2 rounded">Register</button>
         </div>
     </nav>
     
