Update register feature to integrate across services

--- a/enter_data/frontend/index.html
+++ b/enter_data/frontend/index.html
@@ -10,12 +10,13 @@
     <nav class="bg-gray-800 p-4 text-white flex justify-between">
         <h1 class="text-xl font-bold">Expense Tracker</h1>
         <div class="flex space-x-2">
+                <a id="show-results-link" href="#" class="hidden bg-purple-600 px-4 py-2 rounded hover:bg-purple-700">Show Results</a>
             <form id="login-form" class="flex space-x-2">
                 <input type="text" id="username" placeholder="Username" class="p-2 rounded bg-gray-700 text-white" required>
                 <input type="password" id="password" placeholder="Password" class="p-2 rounded bg-gray-700 text-white" required>
             </form>
             <button id="login-button" class="bg-blue-500 px-4 py-2 rounded">Login</button>
-            <button id="register-button" class="bg-green-500 px-4 py-2 rounded">Register</button>
+            <button id="register-button" class="bg-purple-500 px-4 py-2 rounded">Register</button>
         </div>
     </nav>
     
