--- a/show_results/frontend/index.html
+++ b/show_results/frontend/index.html
@@ -8,16 +8,19 @@
 </head>
 <body class="bg-gray-900 text-white">
     <nav class="bg-gray-800 p-4 text-white flex justify-between">
-        <h1 class="text-xl font-bold">Expense Tracker - Analytics</h1>
+        <h1 class="text-xl font-bold">Expense Tracker</h1>
         <div class="flex space-x-2">
+                <a id="enter-data-link" href="#" class="hidden bg-green-600 px-4 py-2 rounded hover:bg-green-700">Enter Data</a>
             <form id="login-form" class="flex space-x-2">
                 <input type="text" id="username" placeholder="Username" class="p-2 rounded bg-gray-700 text-white" required>
                 <input type="password" id="password" placeholder="Password" class="p-2 rounded bg-gray-700 text-white" required>
             </form>
             <button id="login-button" class="bg-blue-500 px-4 py-2 rounded">Login</button>
+            <button id="register-button" class="bg-purple-500 px-4 py-2 rounded">Register</button>
         </div>
     </nav>
-    
+
+
     <div class="flex justify-center items-center min-h-screen p-4">
         <div class="bg-gray-800 p-6 rounded-lg shadow-md w-full max-w-lg">
             <h2 class="text-xl font-bold mb-4">Expense Analytics</h2>
